--- a/examen/package.json
+++ b/examen/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.3",
     "dompurify": "^3.2.4",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "jsdom": "^26.0.0",
     "mysql2": "^3.13.0",
     "pg": "^8.13.3"
